feat: initial commit of repast project
This commit introduces the Repast project, an AI-powered restaurant discovery tool.  It includes a Flask backend and a SvelteKit frontend, along with shared resources.  The backend uses Google Places API and Gemini for restaurant data and AI analysis.  The frontend provides a user interface for searching and filtering restaurants.  Comprehensive setup instructions and API documentation are provided in the README.

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "dest-recs"
+name = "repast"
 version = "0.1.0"
 description = ""
 authors = ["drewpayment <drew.payment@gmail.com>"]
