--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,25 @@ db.sqlite3-journal
 
 # Poetry
 poetry.lock
+
+# Sveltekit specific files 
+node_modules
+dist
+test-results/
+package-lock.json
+yarn.lock
+vite.config.js.timestamp-*
+/packages/create-svelte/template/CHANGELOG.md
+/packages/package/test/**/package
+/documentation/types.js
+.env
+.vercel_build_output
+.svelte-kit
+.cloudflare
+.pnpm-debug.log
+.netlify
+.turbo
+.vercel
+.test-tmp
+symlink-from
+.idea/
