--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
+flask = "^3.1.0"
+flask-cors = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
